--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
              <h1>NORDIC ROSE</h1>
             </div>
             <ul class="navbar-lists">
-                <li><a href="#Blog" class="hover-underline-animation">BLOG</a></li>
+                <li><a href="./index.html" class="hover-underline-animation">BLOG</a></li>
                 <li><a href="#About" class="hover-underline-animation">ABOUT</a></li> 
                 <li><a href="#Links" class="hover-underline-animation">LINKS</a></li>
                 <li><a href="#Projects" class="hover-underline-animation">PROJECTS</a></li>
