--- a/index.html
+++ b/index.html
@@ -10,25 +10,30 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
-        <div class="nav">
-
-            <div class="navbar-header">
-             <h1>NORDIC ROSE</h1>
-            </div>
-            <ul class="navbar-lists">
-                <li><a href="#Blog" class="hover-underline-animation">BLOG</a></li>
-                <li><a href="./about.html" class="hover-underline-animation">ABOUT</a></li> 
-                <li><a href="#Links" class="hover-underline-animation">LINKS</a></li>
-                <li><a href="#Projects" class="hover-underline-animation">PROJECTS</a></li>
-            </ul>
-        </div> 
-        <div class="burger">
-          <div class="line1"></div>
-          <div  class="line2"></div>
-          <div  class="line3"></div>
+    <div class="header-class">
+      <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+          <div class="nav-title">
+            NORDIC ROSE
+          </div>
         </div>
-        </nav>
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+        
+        <div class="nav-links">
+          <a href="#Blog" target="_blank">BLOG</a>
+          <a href="./about.html" target="_blank">ABOUT</a>
+          <a href="#Links" target="_blank">LINKS</a>
+          <a href="#Projects"target="_blank">PROJECTS</a>
+        </div>
+      </div>
+      </div>
         <div class="header-cont">
         <h2 class="content">
           A few words about this blog platform, Ghost, and how this site was made
@@ -41,7 +46,7 @@
       </div>
       </div>
   </header>  
-
+  
 <section class="body-content">
 <div>
   <hr class="hr" color="black" size="2px" /> 
@@ -49,27 +54,39 @@
 <div class="body1">
   <div class="body1-content">
     <img  class="bodyimage"src="./image2/image 3.png">
-<div>
-  <h3 class="text">
-  MIKA MATIKANEN
-    </h3>
-    <p>  Apr 15, 2020. 4 min read
-    </p>
-</div>
+    <div>
+      <h3 class="text">
+        MIKA MATIKANEN
+      </h3>
+      <p>  Apr 15, 2020. 4 min read
+      </p>
+    </div>
 
-  </div> 
-  <div class="images">
-    <img class="imag" src="./image2/image 4.png">
-  <img class="imag" src="./image2/image 5.png">
+  </div>
+  <div class="imag">
+    <div>
+      <img src="./image2/image 4.png">
+    </div>
+    <div>
+      <img src="./image2/image 5.png" class="img-1">
+    </div>
+    <div class="hide">
+      <img src="./image2/image7.png">
+    </div>
   </div>
 
   </div>
 <div class="info">
-  <p>
+  <p class="unwanted">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula suscipit finibus. Aenean pharetra quis lacus at viverra. 
   </p>
+  <br><br>
+  <p class="anohterVersion">
+    This lovely web is full of everything which is created I don't know what in mind, considering that sometimes totally bonkers stuff might be highly relevant if it has the right kind of thinking behind it.
+  
+  </p>
   <div class="p2">
-<p>
+<p class="unwanted">
 Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam quis posuere ligula. In eu dui molestie, molestie lectus eu, semper lectus. 
   </p>
   </div>
@@ -79,22 +96,47 @@ Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
     Next on the pipeline.
   </h2>
   </div>
-  <div class="info2">
-  <p>
-    Duis eu velit tempus erat egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula suscipit finibus. Aenean pharetra quis lacus at viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
-</p>
-<p class="infop">
-Morbi efficitur auctor metus, id mollis lorem pellentesque id. Nullam posuere maximus dui et fringilla. 
-  </p>
+  <div class="info2 an">
+    <p>
+      Duis eu velit tempus erat egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula suscipit finibus. Aenean pharetra quis lacus at viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+    </p>
+    <br>
+    <br>
+    <p class="infop">
+        Morbi efficitur auctor metus, id mollis lorem pellentesque id. Nullam posuere maximus dui et fringilla. 
+    </p>
+   
 </div>
+<p class="anohterVersion text_center">
+  This lovely web is full of everything which is created I don't know what in mind, considering that sometimes totally bonkers stuff might be highly relevant if it has the right kind of thinking behind it.
+
+</p>
+<br>
+<br>
 <div class="man">
   <img src="./image2/Rectangle 8.png">
+  <br>
   <p class="man2">"Image caption centered this way and I’ll make this a bit longer to indicate the amount of line-height."</p>
 </div>
+<br>
+<br>
 <div class="an">
   <p>Aenean pharetra quis lacus at viverra. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam quis posuere ligula. </p>
+  <br>
+  <br>
 
    <p class="in">In eu dui molestie, molestie lectus eu, semper lectus. Proin at justo lacinia, auctor nisl et, consequat ante. Donec sit amet nisi arcu. Morbi efficitur auctor metus, id mollis lorem pellentesque id. Nullam posuere maximus dui et fringilla. Nulla non volutpat leo.</p>
+</div>
+<div class="container">
+  <p>
+    This lovely web is full of everything which is created I don't know what in mind, considering that sometimes totally bonkers stuff might be highly relevant if it has the right kind of thinking behind it. 
+    </p>
+    <br>
+    <br>
+    <br>
+    <p>
+      Luckily, in the middle of all that, there are some pockets of content that offer delightfully valuable contrast to cursory wisdom in some of the established channels.
+    </p>
 </div>
 <div class="list">
   A list looks like this:
@@ -114,7 +156,7 @@ Third item in the list
 </div>
 <div class="class">
   <p>
-    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam quis posuere ligula. 
+   Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam quis posuere ligula. 
   </p>
 </div>
 <div class="thanks">
@@ -123,31 +165,54 @@ Third item in the list
 Mika
   </h4>
 </div>
-<div class="social media">
-  <div>
+<div class="social">
+  <div class="social">
   <img class="media1" src="./image2/image 4.png">
   <h4>
     Share on Facebook
   </h4>
   </div>
-  <div>
-  <img   class="media1"src="./image2/image 5.png">
+  <div class="social">
+  <img class="media1"src="./image2/image 5.png">
   <h4>
     Share on Twitter
   </h4>
   </div>
 </div>
-<div class="tags">
-  <h4>
-    Tags: product design, culture.
-  </h4>
+<br>
+<br>
+<br>
+<div class="img_container">
+  <div>
+  <h3 >
+  Share:
+  </h3>
+  </div>
+  <div class="imag">
+  <div>
+  <img src="./image2/image 4.png">
+  </div>
+  <div>
+  <img src="./image2/image 5.png">
+  </div>
+  <div>
+  <img src="./image2/image7.png">
+  </div>
 </div>
-<div class="design1">
-  <img src="./image2/image 3.png">
-  <p class="text2">
-    Mika Matikainen  is a Design Founder & Advisor, Berlin School of Creative Leadership Executive MBA participant, Zippie advisor, Wolt co-founder, and Nordic Rose stakeholder.  
-  </p>
-</div>
+
+
+
+  <div class="tags">
+    <h4>
+      Tags: product design, culture.
+    </h4>
+  </div>
+  <div class="design1">
+    <img src="./image2/image 3.png">
+    <p class="text2">
+      Mika Matikainen  is a Design Founder & Advisor, Berlin School of Creative Leadership Executive MBA participant, Zippie advisor, Wolt co-founder, and Nordic Rose stakeholder.  
+    </p>
+  </div>
 </div>
 </div>
 </section>
