--- a/about.html
+++ b/about.html
@@ -10,20 +10,30 @@
 </head>
 <body>
   <header>
-    <nav class="navbar">
-        <div class="nav">
-
-            <div class="navbar-header">
-             <h1>NORDIC ROSE</h1>
-            </div>
-            <ul class="navbar-lists">
-                <li><a href="./index.html" class="hover-underline-animation">BLOG</a></li>
-                <li><a href="#About" class="hover-underline-animation">ABOUT</a></li> 
-                <li><a href="#Links" class="hover-underline-animation">LINKS</a></li>
-                <li><a href="#Projects" class="hover-underline-animation">PROJECTS</a></li>
-            </ul>
-        </div> 
-        </nav>
+    <div class="header-class">
+    <div class="nav">
+      <input type="checkbox" id="nav-check">
+      <div class="nav-header">
+        <div class="nav-title">
+          NORDIC ROSE
+        </div>
+      </div>
+      <div class="nav-btn">
+        <label for="nav-check">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
+      
+      <div class="nav-links">
+        <a href="#Blog" target="_blank">BLOG</a>
+        <a href="./index.html" target="_blank">ABOUT</a>
+        <a href="#Links" target="_blank">LINKS</a>
+        <a href="#Projects"target="_blank">PROJECTS</a>
+      </div>
+    </div>
+    </div>
         <div class="header-cont">
             <div>
                 <img  class="center" src="./image2/image 2.png">
